--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RecoMovie</title>
+
+    <meta name="description" content="Discover and enjoy personalized movie recommendations with ScreenMate, your ultimate movie companion. Explore a curated collection of films tailored to your taste.">
+    <meta name="keywords" content="movie recommendations, ScreenMate, film suggestions, personalized movies, cinema, watchlist">
+    <meta name="author" content="Dev Muliya">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="ScreenMate - Personalized Movie Recommendations">
+    <meta property="og:description" content="Discover and enjoy personalized movie recommendations with ScreenMate, your ultimate movie companion. Explore a curated collection of films tailored to your taste.">
+    <meta property="og:image" content="SMcard.png">
+    <meta property="og:url" content="https://screen-mate.onrender.com/">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ScreenMate - Personalized Movie Recommendations">
+    <meta name="twitter:description" content="Discover and enjoy personalized movie recommendations with ScreenMate, your ultimate movie companion. Explore a curated collection of films tailored to your taste.">
+    <meta name="twitter:image" content="SMcard.png">
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <title>Screen Mate - Personalized Movie Recommendations</title>
+
     <style>
       body{
         background-color: black;
